--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/image-url": "^2.0.3",
+    "@sanity/vision": "^5.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.28.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "next-sanity": "^12.0.14",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-wrap-balancer": "^1.1.1",
+    "sanity": "^5.5.0",
     "simple-icons": "^16.6.0",
     "tailwind-merge": "^3.4.0"
   },
