--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^1.13.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/image-url": "^2.0.3",
     "@sanity/vision": "^5.5.0",
